--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
-    "@tanstack/react-query": "4.29.19",
+    "@tanstack/react-query": "^5.28.0",
     "axios": "^1.8.4",
-    "expo": "~52.0.42",
-    "expo-image-picker": "~16.0.6",
-    "expo-secure-store": "~14.0.1",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
+    "expo": "~53.0.8",
+    "expo-image-picker": "~16.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-native": "^0.76.9",
-    "react-native-image-picker": "^8.2.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0"
   },
   "private": true
 }
