--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "expo": "~53.0.8",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "fs": "^0.0.1-security",
